[tool.poetry]
name = "randomforest"
version = "0.1.0"
description = ""
authors = ["Jovanney <100790418+Jovanney@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
